objects/CLT_ProductCategory__mdt.object
<CustomObject>
    <label>CLTProductCategory</label>
    <pluralLabel>CLTProductCategories</pluralLabel>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImageURL__c</fullName>
        <label>ImageURL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AxisAmount__c</fullName>
        <label>Axis Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>